--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@cyansalt/eslint-config-preset": "^1.15.0",
     "@cyansalt/tsconfig": "^2.2.1",
     "@release-it/conventional-changelog": "^7.0.2",
+    "@types/node": "^20.8.10",
     "release-it": "^16.2.1",
     "typescript": "^5.2.2",
     "unbuild": "^2.0.0",
