--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@cyansalt/tsconfig": "^2.2.1",
     "@release-it/conventional-changelog": "^8.0.1",
     "@types/node": "^20.10.4",
+    "eslint": "^9.3.0",
     "release-it": "^17.0.0",
     "typescript": "^5.3.3",
     "unbuild": "^2.0.0",
