--- a/package.json
+++ b/package.json
@@ -5,12 +5,17 @@
   "type": "module",
   "main": "./dist/index.cjs",
   "module": "./dist/index.mjs",
-  "types": "./dist/index.d.ts",
+  "types": "./dist/index.d.mts",
   "exports": {
     ".": {
-      "types": "./dist/index.d.ts",
-      "import": "./dist/index.mjs",
-      "require": "./dist/index.cjs"
+      "import": {
+        "types": "./dist/index.d.mts",
+        "default": "./dist/index.mjs"
+      },
+      "require": {
+        "types": "./dist/index.d.cts",
+        "default": "./dist/index.cjs"
+      }
     }
   },
   "files": [
@@ -18,7 +23,7 @@
   ],
   "scripts": {
     "lint": "eslint --fix './**/*.{js,ts}'",
-    "prepack": "unbuild",
+    "prepack": "tsdown",
     "release": "release-it"
   },
   "repository": {
@@ -46,8 +51,8 @@
     "@types/node": "^20.10.4",
     "eslint": "^9.3.0",
     "release-it": "^17.0.0",
+    "tsdown": "^0.16.7",
     "typescript": "^5.3.3",
-    "unbuild": "^2.0.0",
     "vite": "^5.0.6"
   }
 }
